--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
           Seeking an entry-level opportunity with esteemed organization where I can utilize
           my skills and enhance learning in the field of work. Capable of mastering new
           technologies.</p>
-        <a href="https://drive.google.com/file/d/1uEupXXjLH2C31jnjMD8i28sXi7pwT5L5/view?usp=sharing"
+      
+        <a href="https://drive.google.com/file/d/1wl_Dwq0TvFfLYllIo8g4H_BMuvYsnvJa/view?usp=share_link"
           class="cta">Download Resume</a>
       </div>
     </div>
