--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           my skills and enhance learning in the field of work. Capable of mastering new
           technologies.</p>
       
-        <a href="https://drive.google.com/file/d/1wl_Dwq0TvFfLYllIo8g4H_BMuvYsnvJa/view?usp=share_link"
+        <a href="https://drive.google.com/file/d/1wl_Dwq0TvFfLYllIo8g4H_BMuvYsnvJa/view?usp=sharing"
           class="cta">Download Resume</a>
       </div>
     </div>
